# python-uv-project-example

./: Makefile  README.md  pyproject.toml
src/svc_example/: asgi.py  views.py
tests/: view_test.py  views_test.py
